--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ asgiref==3.8.1
 Django==4.2.17
 psycopg2-binary==2.9.3
 sqlparse==0.5.3
+django-crispy-forms==2.3
+crispy-bootstrap5==2024.10
 typing_extensions==4.12.2
